--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "homepage": ".",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://192.168.1.27:8000",
   "dependencies": {
     "@craco/craco": "^6.4.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.19.3",
+    "axios": "^0.26.1",
     "babel-plugin-import": "^1.13.3",
     "craco-less": "^2.0.0",
     "customize-cra": "^1.0.0",
